--- a/image.html
+++ b/image.html
@@ -1,21 +1,21 @@
 <DOCTYPE! html>
 <html>
    <head>
-     <title>image.chitti</title>
-     <style>
+     <title>image.chitti</title> <!--This is title of webpage-->
+     <style>      <!--This is a CSS tag used for styling the html content-->
        h1{color: white;}
        body{background-color: gray;}
      </style>
    </head>
- <body>
+   <body>   <!--This is body of webpage-->
    <h1>My name is chitti</h1>
-   <p>This is my picture</p>
+   <p>This is my picture</p>  <!--This is paragraph-->
    <a href="img2.jpg"> <h2>CLICKME</h2> </a> 
-   <img src="img1.jpg" alt="chitti"  style="height:350px; width:400px;"/> 
-   <img src="img3.jpg" alt="chitti2" height="350" width="400" style="float:right;"/>
+   <img src="img1.jpg" alt="chitti"  style="height:350px; width:400px;"/> <!--This is an image-->
+   <img src="img3.jpg" alt="chitti2" height="350" width="400" style="float:right;"/> <!--This is also an image-->
    <p>my age is 13 months</p>
-   <p>i love browsing... EEEEE</p>
- </body>
+   <p>i love browsing... EEEEE</p> <!--This is an another paragraph-->
+   </body>
  </html>
 	
 			   
